apps/base/linkding/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: linkding-app-ingress
  namespace: linkding
spec:
  description: "App only accepts ingress on its app port, egress to database and world"
  endpointSelector:
    matchLabels:
      app: linkding
  ingress:
  - fromEntities: ["cluster"]
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        cnpg.io/cluster: linkding-db
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
